# threaded-llm-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: health.py  threads.py
app/core/: config.py  container.py  dependencies.py
app/db/: base.py  models.py  sqlalchemy_uow.py  uow.py
app/db/repositories/: summary_repository.py  thread_repository.py
app/domain/services/: context_service.py  llm_router.py  summary_service.py  summary_worker.py  thread_chat_service.py
app/integration/: llm_provider.py  model_registry.py
app/integration/cache_queue/: backend.py  fingerprint.py
app/integration/openrouter/: client.py
app/schemas/: thread.py
docs/: presentation.md
env/: .env.example
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: chatApiPort.ts  httpChatApi.ts
frontend/src/models/: modelOption.ts  summaryViewModel.ts
frontend/src/state/: chatStore.ts
frontend/src/transport/: conversationTransport.ts
tests/: conftest.py  model_config.py  test_health.py  test_swapability_boundaries.py  test_threads_flow.py
