[project]
name = "superq-chat"
version = "0.1.0"
description = "Multi-agent chat threading service with hierarchical summaries, built with FastAPI, SQLAlchemy, OpenRouter, and React."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "SQLAlchemy==2.0.36",
  "pydantic==2.9.2",
  "pydantic-settings>=2.0.0",
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

